# pcd_extract

./: CMakeLists.txt  README.md  package.xml
py_nodes/: bresenham.py  main.py
src/: README.md  bresenham.py  carto_cloud.cpp  cloud2grid.py  cloud2grid2.py  cloud2grid3.py  cloud_from_depth.cpp  corridor_pose.txt  frontier.py  frontier_approx.py  frontier_num.py  grid.py  mask.py  odomRect.py  plot_2traj.py  plot_meta.py  plot_poses.py  plot_tf_lbl.py  plot_tf_lbl_live.py  poseImg.py  rosbags_simul.sh  sync_images.cpp  test_meta.py  tf2pose.py  tf_broadcaster.py  tf_label.cpp  tf_label_rgb.cpp  tf_sub.cpp
src/frontier/: 15.txt  annotate_frontier.py  frontier_carto.py
